# space-pirates-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
space-pirates/: CMakeLists.txt
src/: SpacePirates.cpp  SpacePirates.h  main.cpp
